<resources>
    <string name="app_name">AirtelApp</string>
    <string name="accessibility_description">This service records pop ups sent by your mobile operator,
        and saves them in USSDService App</string>
    <string name="airtime_balance">Check Balance</string>

    <!--check airtime balance buttons-->
    <string name="check_airtel_balance_button">Airtel</string>

    <string name="config_service">My Response</string>
    <string name="action_log">Log</string>

    <!--Data requesting details… -->
    <string name="order_number">Order Number</string>
    <string name="recipient_number">Recipient Number</string>
    <string name="data_bundle_value">Data Bundle Value</string>
    <string name="data_bundle_name">Data Bundle Name</string>
    <string name="data_bundle_cost">Data Bundle Cost</string>
    <string name="time_received">Time Received</string>
    <string name="request_source">Request Source</string>
    <string name="status">Status</string>
    <string name="time_done">Time Done</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_data_cost">NG</string>

    <!--Resource Spinner details… -->
    <string name="spinnertype1">Airtime</string>
    <string name="spinnertype2">Cash</string>
    <string name="spinnertype3">Agent</string>
    <string name="spinnertype4">Sales Rep</string>
    <string name="spinnertype5">Web</string>
    <string name="spinnertype6">API</string>

    <!--Bundle value details… -->
    <string name="bundlevalue1">1.5gb</string>
    <string name="bundlevalue2">3.5gb</string>
    <string name="bundlevalue3">5gb</string>

    <!--Buttons details… -->
    <string name="send_data_button">Send Data</string>
    <string name="data_balance">Data Balance</string>

    <!--menu details-->
    <string name="request_sent">Data Sent Request</string>
    <string name="check_balance_request">Check Balance Request</string>
    <string name="log_data">API Request Log</string>
    <string name="contact_network">Contact Network</string>
    <string name="date_pick">Date Pick</string>
    <string name="day_report">Day Report</string>
    <string name="shift_report">Shift Report</string>

    <!--notification message-->
    <string name="notification_msg">Be Mighty!, You received 1.5GB from Mighty Interactive Limited.
        Kindly dial *461*2# to check your balance. Thank you!</string>

    <!-- Label -->
    <string name="overview">Overview</string>
    <string name="data_value">Bundle Value</string>
    <string name="data_cost">Bundle Cost</string>

    <!-- Day Pick -->
    <string name="shift_sales_summary">Shift Sales Summary</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="closing_balance">Close Balance</string>
    <string name="total_sales">Total Sales</string>
    <string name="date">Date</string>
    <string name="date_selected">25/06/2018</string>
    <string name="date_picker">Date Picker</string>
    <string name="view">View</string>
    <string name="sales_list">Sales List</string>

</resources>
