<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateUser">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ussd_code_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Overview Label -->
        <TextView
            style="@style/OverviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/recipient_number"
                style="@style/OverviewFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipient_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/data_bundle_name"
                style="@style/OverviewFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_bundle_name"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <!-- Bundle Value category -->
    <LinearLayout
        android:id="@+id/bundle_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Bundle Value Label -->
        <TextView
            style="@style/OverviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_value" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <!-- Bundle value drop-down spinner -->
            <Spinner
                android:id="@+id/data_bundle_value"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Data cost category -->
    <LinearLayout
        android:id="@+id/bundle_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Bundle Value Label -->
        <TextView
            style="@style/OverviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_cost" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/data_bundle_cost"
                style="@style/OverviewFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_bundle_cost"
                android:inputType="number" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_data_cost" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Request source category -->
    <LinearLayout
        android:id="@+id/request_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Request source Label -->
        <TextView
            android:id="@+id/textView"
            style="@style/OverviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_source" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <!-- Request source drop-down spinner -->
            <Spinner
                android:id="@+id/resource_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/send_data_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/send_data_button"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/data_balance"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/data_balance"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Your balance"
                style="@style/OverviewStyle"/>

            <TextView
                android:id="@+id/balance_airtime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                style="@style/OverviewFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/send_data_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</LinearLayout>